--- a/Knowledge QA System/Meetings/会议2.md
+++ b/Knowledge QA System/Meetings/会议2.md
@@ -15,18 +15,16 @@
 
 ## Meeting 2024.04.15
 1. **项目交流**：
-    - 确保每个成员都理解知识问答子系统的目标和要求。
-    - 讨论项目的最终目标，决定进行复杂问答和闲聊功能。
+    - 讨论并确定项目需要实现的功能。
+    - 根据项目所要实现的功能进行深入了解对本系统进行设计。
+    - 确定用户使用手册由各部分的开发人员各自完成，最后进行整合。
 
 2. **技术栈交流**：
     - 确定前后端技术栈，前端使用Vue框架、后端使用Djiango。
-    - 参考已有资料，进行学习，下次开会决定使用的技术栈，包括编程语言python、框架、数据库和工具。
-    - 讨论前后端的命名、模块整合事宜，初步决定进行定时交流和整合。
-    - 前端界面展示。
 
 3. **项目管理及任务安排**：
     - *下次会议时间：周一 2024.04.22 21:00pm*
-    - 组员了解相关技术栈的信息，加深理解，下次开会确定技术栈，讨论实施细节。
+    - 组员深入学习了解应用的技术栈，学习项目相关的内容
 
 
 
